--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -417,6 +417,18 @@
  QIE_YGD_destroy_concessions:0 "终结租界"
  QIE_YGD_expand_our_flock:0 "扩大我们信众"
  QIE_YGD_holy_fortresses:0 "神圣的要塞"
+ QIE_legitimacy_of_the_monarchy:0 "君主制的合法性：§o过街老鼠§!"
+ QIE_legitimacy_of_the_monarchy_desc:0 "大清国祚表面上已然延绵三百余载，可如今君臣伦常却已黯然失色，积重难返。在中国公民，无论是官僚、工人还是农民眼中，一众暴君僭主怀揣着改革的承诺来了又去，到头来一切却不过是原地踏步。大清奉天承命，在名义上宣称了华夏四境的法统，可却只是带着国家步步走向灭亡。若是还想让百姓信服君君臣臣之纲纪，那首先便要把他们从国乱岁凶、纷争不息的境遇中解救出来。同时也要让百姓相信一件事——清虽旧邦，其命维新。\n\n毫无疑问，自1928年以来，朝廷一直在塑造自身的现代形象。宣统帝只不过是代表人民意志的仆人，当然人民群众从来没支持过他。而在奢华的巡幸、无意义的宣言之外，真正负责民族国家建设计划的设计师是直系集团。直系还在乎自己的名声，所以至少在关注民意这方面还是可圈可点的。然而，鉴于其备受争议的过去，许多人对此并不乐观。"
+ QIE_legitimacy_of_the_monarchy_1:0 "君主制的合法性：§r草台班子§!"
+ QIE_legitimacy_of_the_monarchy_1_desc:0 "$QIE_legitimacy_of_the_monarchy_desc$"
+ QIE_legitimacy_of_the_monarchy_2:0 "君主制的合法性：§r颇受争议§!"
+ QIE_legitimacy_of_the_monarchy_2_desc:0 "$QIE_legitimacy_of_the_monarchy_desc$"
+ QIE_legitimacy_of_the_monarchy_3:0 "君主制的合法性：§C得到认可§!"
+ QIE_legitimacy_of_the_monarchy_3_desc:0 "$QIE_legitimacy_of_the_monarchy_desc$"
+ QIE_legitimacy_of_the_monarchy_cao:0 "君主制的合法性：§m曲线富国§!"
+ QIE_legitimacy_of_the_monarchy_cao_desc:0 "大清国祚表面上已然延绵三百余载，可如今君臣伦常却已黯然失色，积重难返。在中国公民，无论是官僚、工人还是农民眼中，一众暴君僭主怀揣着改革的承诺来了又去，到头来一切却不过是原地踏步。大清奉天承命，在名义上宣称了华夏四境的法统，可却只是带着国家步步走向灭亡。若是还想让百姓信服君君臣臣之纲纪，那首先便要把他们从国乱岁凶、纷争不息的境遇中解救出来。同时也要让百姓相信一件事——清虽旧邦，其命维新。\n\n尽管矛盾重重，但这个由直系集团与满清帝王合作建立的独特制度还是得以幸存，并得到了稳定而蓬勃的发展。在曹总裁和吴大帅的庇护下，清王朝迎来了一个繁荣和现代化的新时代，并成为了全亚洲商业利益团体的朋友。虽然政治舞台上的多元化进程被忽视，但经济状况已经得到迅速改善。新兴的中产阶级迅速发展，一座座城市成为了点缀在东方的珍珠项链，农民们则庆祝着风调雨顺、年年有余。这证明了“乐寿老人”和他倡导的中西特殊外交关系是正确的，二十世纪将属于中国。"
+ QIE_legitimacy_of_the_monarchy_wu:0 "君主制的合法性：§G和谐平衡§!"
+ QIE_legitimacy_of_the_monarchy_wu_desc:0 "大清国祚表面上已然延绵三百余载，可如今君臣伦常却已黯然失色，积重难返。在中国公民，无论是官僚、工人还是农民眼中，一众暴君僭主怀揣着改革的承诺来了又去，到头来一切却不过是原地踏步。大清奉天承命，在名义上宣称了华夏四境的法统，可却只是带着国家步步走向灭亡。若是还想让百姓信服君君臣臣之纲纪，那首先便要把他们从国乱岁凶、纷争不息的境遇中解救出来。同时也要让百姓相信一件事——清虽旧邦，其命维新。\n\n尽管矛盾重重，但这个由直系集团与满清帝王合作建立的独特制度还是得以幸存，并得到了稳定而蓬勃的发展。在曹总裁和吴大帅的庇护下，清王朝采用了民族主义辩证法和反租界主义立场，从而得到了民众的支持。清王朝重获人民信任与执政合法性，进而对那些和谐社团的温和反对派打开了大门。随着国家重新统一，曾经信者寥寥的民主立宪君主制也近在眼前了。然而，站在皇位背后的真正力量——玉帅和保定王，两人仍然对共和梦想心怀信仰和同情，若未来爆发了新的冲突，这份和谐平衡随时可能会被破坏..."
  QIE_fractured_empire:0 "破碎的帝国"
  QIE_fractured_empire_desc:0 "理论上，大清帝国统御着除了满洲，西藏和蒙古之外的整个中国。实际上，皇帝的权力仅限于紫禁城内，而国会总裁曹锟的权力则仅限于国会会场内。吴佩孚是龙椅后的幕后操纵人，他对巩固自己在洛阳的政权基础和平衡军事集团之间的相互利益，比采取任何有意义的方式改善自己的国家更感兴趣。"
  QIE_big_debt:0 "无法抗拒的国家债务"
@@ -433,8 +445,10 @@
  QIE_popular_warlord_idea_desc:0 "在吴佩孚元帅决定支持反租界的督理陈调元之后，他发现自己的民望明显得增加了。尽管在知识分子的小圈子里，他仍然备受质疑，但无可争议的是，他执政的合法性上升了。"
  QIE_defaulted_debt:0 "外债违约"
  QIE_defaulted_debt_desc:0 "为了增强政权在国内的合法性，我们拖欠了国际债务。该一举措的后果将会对我国经济造成数个月的持续影响，并且涉及我们几乎所有的经济部门。"
- QIE_harmonious_balance_idea:0 "和谐平衡"
- QIE_harmonious_balance_idea_desc:0 "我们的政府实现了一个几乎难以实现的目标——使得皇帝在道法上的权威与直系军阀的世俗权力之间形成并维持了和谐且微妙的平衡。"
+ QIE_extol_nationalist_cause:0 "歌颂民族主义事业"
+ QIE_extol_nationalist_cause_desc:0 "若说什么是中国青年党的底色，想必就是至真至诚的爱国主义。他们对国家与人民的忠诚无可挑剔，他们唤醒了无数心中尚存民族自豪与政治信仰的国民，他们将自己的灵魂与血肉毫无保留的奉献给了国家大业。他们的运动是出于对国家纯粹的爱，而这些随时甘愿为华夏文明抛头颅洒热血的英雄儿女，如今随时听候我们的差遣。"
+ QIE_seeing_to_rural_reconstruction:0 "着手乡村建设"
+ QIE_seeing_to_rural_reconstruction_desc:0 "通过与国会中帝国宪政会的改革派人士合作，我们将全力以赴解决中国农村的突出问题。民为邦本，我们将开始实施晏阳初提出的“四大教育”和“三大方式”，以此推动中国成为现代化国家。"
  QIE_local_logistics:0 "传统后勤"
  QIE_local_logistics_desc:0 "我们已经同西方的那些机动化后勤之类的新奇玩意儿无缘了，毕竟中国的基础设施无法支撑这样的支援装备。采用传统的后勤运输方式确实无法使我们在这方面赢得任何的科技优势，但是要知道骡马可比卡车更能应付崎岖的山路。"
  QIE_german_bailout:0 "德国的援助"
@@ -912,6 +926,7 @@
  QIE_constitution_TT:0 "§Y在直系军阀的监督下，法学家们将会颁定一套宪法。§!"
  QIE_loose_ends_TT:0 "解锁£decision_icon_small §H决议§!以§Y夺取蒙古§!和§Y西藏§!，前提是还没控制这些地区。\n解锁£decision_icon_small §H决议§!以§Y征服中国其他的未控制地区§!\n解锁£decision_icon_small §H决议§!以§Y整合忠诚的地方政府§!"
  QIE_end_concessions_TT:0 "解锁£decision_icon_small §H决议§!以夺取§Y澳门§!、§Y青岛§!和§Y其他的外国租界§!，前提是上述地区仍未受控制。"
+ QIE_improve_legitimacy_tt: "§G民众对我们政府的看法将会改善！§!"
  breach_dams_TT:0 "解锁£decision_icon_small §H决议§!来§Y掘开黄河堤坝。§!如果你在和平时期完成了这个国策，你可以将平民转移离开危险地区，在某种程度上减轻洪水将会带来的负面效果。"
  civilians_relocated_TT:0 "当我们掘开大坝，政治点数花费和稳定度减益将会大大减少。"
  QIE_caokun_constitution_tt:0 "曹锟宪法将在短期内保证稳定，但长远来看势必会耗尽政治点数。"
@@ -1771,6 +1786,9 @@
  qieflavor.5.t:0 "缄默的媒体"
  qieflavor.5.d:0 "看来我们放走那个突袭黑娼寮时逮捕的年轻德国人的决定比预期想的结果要好。这孩子之后被调到了天津，而放他走的警官张蓓交获得加薪，以奖励他“敏锐的政治头脑”。"
  qieflavor.5.a:0 "终于有好消息了！"
+ qieflavor.6.t:0 "梅里尔突击队"
+ qieflavor.6.d:0 "与史迪威一起逃亡美国顾问之一弗兰克·梅里尔在传授部队游击战技巧方面很有声誉。作为新泽西州南部松毛岭战役的老兵的他现在是一位一流的将军，并且就连反租界主义者都对他训练军队的技巧大表赞扬。因而几位直隶顾问建议把他从一般顾问提拔为正式的将军。"
+ qieflavor.6.a:0 "太好了！"
  qieflavor.7.t:0 "睿亲王请求委任！"
  qieflavor.7.d:0 "在保定武备学堂的年轻军官政变成功后，1911年内阁前海军大臣睿亲王载洵向我们提出了要求。他要求一份海军的委任状。确实，很多海军军官同直系军阀都有理不清的关系，但是总体上而言他们还是忠于我们的。载洵曾经出访西洋深入考察海军但他却从未上舰指挥过一场战斗，以至于很多人怀疑海军的真实实力。"
  qieflavor.7.a:0 "提拔他"
@@ -1839,6 +1857,9 @@
  qieflavor.27.t:0 "进口无线电台深受军队欢迎"
  qieflavor.27.d:0 "尽管度支部一些官员以进口的价格过于高昂为由反对我们从德国进口上百台顶级的西门子电台。但是我们的将领反应这些电台在军队里大受欢迎。在最近扫荡北部地区的土匪的行动中，我们的士兵们能够有效地利用无线电互相保持联系并顺利得对土匪们实现分割和搜捕。这些电台在战场上具有巨大的潜力，且已经对我们的部队产生了一定积极的影响。"
  qieflavor.27.a:0 "很好！"
+ qieflavor.57.t:0 "三弟的墓志铭"
+ qieflavor.57.d:0 "烈火和钢铁摧毁了“笑面虎”的昔日领地，当地本就屈指可数的现代化进步成果现已荡然无存，接踵而至的是战争带来的生灵涂炭，这一切都在迫使难民逃离昔日的八省联合境内。我们治下的不少人正匆忙设立难民救济机构和慈善组织，以帮助这些流离失所者。令人惊讶的是，一位意想不到的资助者出现了。\n\n曹锟大帅如今成为了难民救济事业的核心人物，这的确是一道不同寻常的景象。尽管他年事已高、体弱多病，但老帅还是尽其所能动员并呼吁更多的捐款和资金以帮助流离失所的难民，并为此捐献了大半年薪，赢得了北京和外国媒体的一致赞扬。许多报刊将曹锟大帅与当年在救灾扶贫工作中表现出色的曹锐（曹锟的弟弟，曾任直隶省省长）相提并论。人们对曹锟大帅的动机众说纷纭，有人认为这是他为了抗衡吴佩孚而发起的一次公关战，也有人认为他是以此致敬去世多年的弟弟曹锐，曹锐之死给老帅造成了沉重的打击，导致他曾一度辞去所有公职。\n\n曾经为了登上大总统宝座而向议员行贿、挥金如土的曹锟，如今却号召人们捐款帮助穷苦大众，曹锟的真正动机也许只有他自己知道。"
+ qieflavor.57.a:0 "“要是三弟仍在人世...”"
  qieflavor.100.t:0 "爱新觉罗·显玗"
  qieflavor.100.d:0 "爱新觉罗·显玗，更为人熟知的是她的日文名川岛芳子，作为一名满洲贵族小姐，同时也是溥仪皇帝的远方表亲，近几年在朝廷中取得了举足轻重的地位。尽管她仍然相当年轻，但已经证明了自己是一名娴熟的野心家和阴谋家。她选择同宗社党合作以实现满洲勋贵们的目标。\n\n她于1915年由她的父亲肃亲王交给日本人收养以至于溥仪身边不少人都质疑她对帝国的忠诚。在皇帝寓居天津的时候，显玗多次敦促溥仪同日本人而非德国人进行合作使得她在皇帝的近亲中相当不受待见。十年来，大家逐渐原谅了她当年年少而无知的行为，而她也成功地使自己成为了一支不容小觑的势力。"
  qieflavor.100.a:0 "有趣"
@@ -2020,9 +2041,6 @@
  qieygd.7.c:0 "从博大精深的中国文化中汲取出的新意象设计能够更好地满足我们的需求。"
  QIE_hire_american_company:0 "雇佣美国顾问"
  QIE_hire_american_company_desc:0 "美国联邦军队的失败，使大量曾经身经百战的人漂泊不定。其中一位是约瑟夫·史迪威将军，他与吴佩孚和直隶派私交甚笃，曾在20世纪20年代和30年代曾担任过美国驻外使节。通过向他和他的一些军官提供顾问职位，我们可以获得一位身经百战的将军，而且还有他在中国的丰富经验。"
- qieflavor.6.t:0 "梅里尔突击队"
- qieflavor.6.d:0 "与史迪威一起逃亡美国顾问之一弗兰克·梅里尔在传授部队游击战技巧方面很有声誉。作为新泽西州南部松毛岭战役的老兵的他现在是一位一流的将军，并且就连反租界主义者都对他训练军队的技巧大表赞扬。因而几位直隶顾问建议把他从一般顾问提拔为正式的将军。"
- qieflavor.6.a:0 "太好了！"
  qieygd.8.t:0 "年事已高的天师"
  qieygd.8.d:0 "作为唯一君主统治整个帝国和管理一个千年宗教完全是两码事，我们敬爱的天师也因为这件事付出了惨痛的代价。张天然，一贯道第十八代祖师，月称菩萨和活佛济公的转世，同时也是我们的国父，现在却因为年老力衰和繁重的压力奄奄一息。在他身边是他心爱的妻子孙素珍，也就是我们的师母，以及他们的12个孩子，他们在为他康复祈祷的同时，还承担着我们即将去世的国父曾经独自处理的各种国家事务。张天然的生命正微妙地处于一个平衡状态，谁都不知道他能否能挺过来，然而一场辉煌的国葬却在为他悄然准备了。他的心腹们也准备将孙素珍加冕为我们大天帝国的第二位君主和中国的第一位女皇。现在会发生什么，都听命于天了。"
  qieygd.8.a:0 "张天然恢复了健康，以皇帝的身份重临，不过比起他的助手，他还是退居了二线"
