--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -955,6 +955,10 @@
  shandong.445.t:0 "薛颠带着路中节跑了"
  shandong.445.d:0 "尽管孙素贞和张天然保证路中节人身安全，不过薛颠还是跑了，红枪会并未能抓到他，因此弄得人心惶惶。张天然黑着脸到了薛颠家，并向上天祈祷，几个小时之后，他出来说薛颠蒙受上天召唤而去，要马上进行朝拜，当红枪会饱食满腹时，薛颠和路中节已经逃离了一贯道的势力范围，出乎大多数人的意料，张天然并未去追捕他们，而是虔诚的相信了祷告。"
  shandong.445.a:0 "这可能是大劫的一部分"
+ shandong.504.t:0 "破釜沉舟"
+ shandong.504.d:0 "事态发展令人惊诧。看起来北京的政坛已经不讳向世人展现其背地里涌动的暗流。保定王曹锟和玉帅吴佩孚的铁腕之治似乎也并没有国际社会看来的那么稳固。直系集团在八省崩溃的过程中毫无作为，进而陷入一片内乱。满族皇室察觉到了弱点，遂暗中发动政变，想要将直系集团逐出中原。\n\n然而，历史却又重演，吴佩孚再次绝处逢生。据称，政变企图被彻底挫败，而新的“护国公”吴佩孚正在磨刀霍霍准备复仇。直系集团横了心，决定报复想要刺杀玉帅的叛徒们。\n\n不过这也给了[SQI.GetLeader]一个机会。山东政局稳定，加之他也对君主制有所同情，因而这可能是他从一省之主迈向逐鹿天下的大好机会。当然，前提是他的部队能与玉帅分庭抗礼，这想想还是难如登天的。"
+ shandong.504.a:0 "要先发制人！皇上万岁！"
+ shandong.504.b:0 "我吃饱了没事去和玉帅对着干？"
  SQI_imprisoned_emperor:0 "被软禁的皇帝"
  SQI_unify_the_country:0 "统一四方的军阀"
  SQI_unify_the_country_desc:0 "张天然希望完成从孙中山到溥仪的精神谱系建构。其中就包括把国家权力逐步移交给一贯道政府的手中这一步。消除这种对儒家价值的冒犯将会使我国更好的面对大劫的来临。"
