--- a/localisation/ideologies_l_simp_chinese.yml
+++ b/localisation/ideologies_l_simp_chinese.yml
@@ -1,9 +1,16 @@
 ﻿l_simp_chinese:
+ islamic_communism_subtype:0 "伊斯兰共产主义"
+ islamic_communism_subtype_desc:0 "§Y伊斯兰共产主义§!\n\n在传统的穆斯林地区，自给自足的小农经济根深蒂固，恶劣的生态环境将居民聚落切割的七零八碎，景教，摩尼教，拜火教，长生天，儒教......一次次的占领和暴政激起了一次次的起义和反抗。千年以来，当地的教众要么是屈服于异族，要么是屈服于暴君，那些辛劳勇敢的反抗者永远见不到地上天国的建成，却在光耀的指引下向着天堂奔去。\n\n如今，新疆的劳苦大众第一次尝到了平等、自由、和尊严的滋味。在战胜了各式各样的恶魔后，东突厥斯坦民主革命党仔细思考了这个旧时代的宗教是去是留。阿合买提江一派生根在农村的革命干部提出了一套折中的理论：在不改变革命原则与组织架构的情况下，在改造原有穆斯林基层设施的基础上继续使用经书的宣传方法，这样则不至于导致农村的基层社会组织发生表面上的崩溃，最大程度的团结农民与维护社会秩序，表面上看，这是一个带有共产主义特色的伊斯兰教派，实际上则是披着伊斯兰教派皮囊的共产主义：无须质疑，经书的古老文本只是真主伟大智慧的管中窥豹，真主之全知全能且是超乎时代之存在，怎么能是古代释经者能够有所定论的呢？\n\n“他在信徒的心降下安宁，以便他们增加信仰，继他们原有的信仰之后。”"
  sorelian_marketism_subtype:0 "修正索雷尔主义"
  sorelian_marketism_subtype_desc:0 "§Y修正索雷尔主义§!\n\n正如正统索雷尔主义中吸收了大量的法国保守主义，诞生在中国的修正索雷尔主义也吸收了大量中式保守主义，如中庸思想、权威崇拜和儒家的家国思想。不同于正统索雷尔主义鼓吹阶级暴力，神话工人阶级的斗争，修正索雷尔主义鼓吹阶级调和，将阶级斗争说成是某种最为可怕的东西。不同于正统索雷尔主义支持经济的社会化，修正索雷尔主义吸收了部分市场自由主义思想，认为经济的社会化会剥夺人民的积极性，鼓吹市场经济和私有化，强调对企业家进行社会主义改造以让工人和旧资产阶级协调。不同于正统索雷尔主义反对文官官僚和政治精英，更崇拜战士和工人中的精英，修正索雷尔主义宣扬对于一切精英的崇拜，甚至包括资本家，而一个强有力的威权政府会扮演统治者的角色。不过同正统索雷尔主义一样，修正索雷尔主义支持民族主义和爱国主义。即使正统索雷尔主义者对修正索雷尔主义百般嫌弃，这种意识形态还是启发了众多后发国家和地区的极权主义者。"
  jun_zheng_ji_quan_subtype:0 "军政极权主义"
  jun_zheng_ji_quan_subtype_desc:0 "§Y军政极权主义§!\n\n军政极权主义是极权宪章的变体，军政极权主义认为民主只会带来争吵和低效，让人民沉浸在妥协的幻想中却什么都得不到，最终成为少数人的傀儡。只有暴力的有组织的集体行动才能够让人民获取自己想要的东西，获得真正的自由，而这种有组织的集体行动的最高境界是军队。因此，军政极权主义希望把社会主义国家变成一个军队，所有人都像军人一样听从领袖的号令进行整齐划一地行动。在军政极权主义国家中，社会将会高度军事化，军人将会被尊崇，经济、政治和社会活动都将像作战一样被上级一层层地指挥。"
 
+ syn_islamic_communism_subtype:0 "伊斯兰共产主义"
+ syn_islamic_communism_subtype_desc:0 "§Y伊斯兰共产主义§!\n\n在传统的穆斯林地区，自给自足的小农经济根深蒂固，恶劣的生态环境将居民聚落切割的七零八碎，景教，摩尼教，拜火教，长生天，儒教......一次次的占领和暴政激起了一次次的起义和反抗。千年以来，当地的教众要么是屈服于异族，要么是屈服于暴君，那些辛劳勇敢的反抗者永远见不到地上天国的建成，却在光耀的指引下向着天堂奔去。\n\n如今，新疆的劳苦大众第一次尝到了平等、自由、和尊严的滋味。在战胜了各式各样的恶魔后，东突厥斯坦民主革命党仔细思考了这个旧时代的宗教是去是留。阿合买提江一派生根在农村的革命干部提出了一套折中的理论：在不改变革命原则与组织架构的情况下，在改造原有穆斯林基层设施的基础上继续使用经书的宣传方法，这样则不至于导致农村的基层社会组织发生表面上的崩溃，最大程度的团结农民与维护社会秩序，表面上看，这是一个带有共产主义特色的伊斯兰教派，实际上则是披着伊斯兰教派皮囊的共产主义：无须质疑，经书的古老文本只是真主伟大智慧的管中窥豹，真主之全知全能且是超乎时代之存在，怎么能是古代释经者能够有所定论的呢？\n\n“他在信徒的心降下安宁，以便他们增加信仰，继他们原有的信仰之后。”"
+
+ radsoc_islamic_communism_subtype:0 "伊斯兰共产主义"
+ radsoc_islamic_communism_subtype_desc:0 "§Y伊斯兰共产主义§!\n\n在传统的穆斯林地区，自给自足的小农经济根深蒂固，恶劣的生态环境将居民聚落切割的七零八碎，景教，摩尼教，拜火教，长生天，儒教......一次次的占领和暴政激起了一次次的起义和反抗。千年以来，当地的教众要么是屈服于异族，要么是屈服于暴君，那些辛劳勇敢的反抗者永远见不到地上天国的建成，却在光耀的指引下向着天堂奔去。\n\n如今，新疆的劳苦大众第一次尝到了平等、自由、和尊严的滋味。在战胜了各式各样的恶魔后，东突厥斯坦民主革命党仔细思考了这个旧时代的宗教是去是留。阿合买提江一派生根在农村的革命干部提出了一套折中的理论：在不改变革命原则与组织架构的情况下，在改造原有穆斯林基层设施的基础上继续使用经书的宣传方法，这样则不至于导致农村的基层社会组织发生表面上的崩溃，最大程度的团结农民与维护社会秩序，表面上看，这是一个带有共产主义特色的伊斯兰教派，实际上则是披着伊斯兰教派皮囊的共产主义：无须质疑，经书的古老文本只是真主伟大智慧的管中窥豹，真主之全知全能且是超乎时代之存在，怎么能是古代释经者能够有所定论的呢？\n\n“他在信徒的心降下安宁，以便他们增加信仰，继他们原有的信仰之后。”"
  radsoc_lu_xun_thought_subtype:0 "鲁迅思想"
  radsoc_lu_xun_thought_subtype_desc:0 "§Y鲁迅思想§!\n\n鲁迅思想是鲁迅先生在一生中所形成的思想体系，他深受中国传统文化与欧洲自由主义、无政府个人主义与社会主义思潮的影响，其核心是“立人”。鲁迅认为，中国要实现真正的进步，首先要造就觉醒的人，即具有独立思考能力、批判精神和勇于担当精神的人。而不是一味的采取行动或是无头脑的革命，他认为在政治革命之前先要进行文化革命。此外鲁迅思想还包括其他内容，如反帝反封建，直接民主，文化批判精神和个性解放等内容"
  mao_ze_dong_thought_subtype:0 "毛泽东思想"
@@ -17,6 +24,8 @@
  radsoc_new_democracy_subtype:0 "新民主主义"
  radsoc_new_democracy_subtype_desc:0 "§Y新民主主义§!\n\n与其说是一种主义，新民主主义更像是一个革命的纲领或者说一个阶段。在琼崖革命者夺取了两广政权后，本就是意识形态大杂烩的他们面对新的局势陷入了迷茫，而在中央做出了团结多数限制工农阶级对民族资本家进行斗争的决议后，革命者更是陷入了争论，他们怀疑现在的工团党是不是要成为下一个陈炯明。为了应对这种怀疑，工团党的首席理论家杨匏安提出目前中国半封建半殖民地的社会性质决定了中国的革命必须分为民主主义革命和社会主义革命两步，而现在的革命仍然是资产阶级性质的民主主义革命。然而由于过去旧范畴民主主义的领导阶级即民族资产阶级的妥协性和软弱性，旧的民主主义革命者最终同封建地主和帝国主义妥协，最终变成陈炯明那种帮助封建主义和帝国主义镇压真正的革命派的反动军阀。所以现在应该进行的是工农阶级领导的联合了民族资产阶级和小资产阶级的新民主主义革命，其革命目标也是工农阶级主导的各革命阶级联合专政的民主共和国，为进一步进行社会主义革命做铺垫。"
 
+ socdem_islamic_communism_subtype:0 "伊斯兰共产主义"
+ socdem_islamic_communism_subtype_desc:0 "§Y伊斯兰共产主义§!\n\n在传统的穆斯林地区，自给自足的小农经济根深蒂固，恶劣的生态环境将居民聚落切割的七零八碎，景教，摩尼教，拜火教，长生天，儒教......一次次的占领和暴政激起了一次次的起义和反抗。千年以来，当地的教众要么是屈服于异族，要么是屈服于暴君，那些辛劳勇敢的反抗者永远见不到地上天国的建成，却在光耀的指引下向着天堂奔去。\n\n如今，新疆的劳苦大众第一次尝到了平等、自由、和尊严的滋味。在战胜了各式各样的恶魔后，东突厥斯坦民主革命党仔细思考了这个旧时代的宗教是去是留。阿合买提江一派生根在农村的革命干部提出了一套折中的理论：在不改变革命原则与组织架构的情况下，在改造原有穆斯林基层设施的基础上继续使用经书的宣传方法，这样则不至于导致农村的基层社会组织发生表面上的崩溃，最大程度的团结农民与维护社会秩序，表面上看，这是一个带有共产主义特色的伊斯兰教派，实际上则是披着伊斯兰教派皮囊的共产主义：无须质疑，经书的古老文本只是真主伟大智慧的管中窥豹，真主之全知全能且是超乎时代之存在，怎么能是古代释经者能够有所定论的呢？\n\n“他在信徒的心降下安宁，以便他们增加信仰，继他们原有的信仰之后。”"
  socdem_anarcho_tridemism_subtype:0 "无政府三民主义"
  socdem_anarcho_tridemism_subtype_desc:0 "§Y无政府三民主义§!\n\n无政府三民主义主要是来自于信奉无政府主义的国民党员李石曾和吴稚晖为了调和无政府主义与三民主义的矛盾而诞生的一种观念。这种矛盾的核心问题在于，中国的无政府主义者的中心观点在于推翻政府，他们大多数都拒绝为官拒绝参政。而李、吴等人不得不回答这样的问题。他们强调无政府主义与三民主义的目标是一致的，革命是分阶段进行的，是漫长的，一味追求革命的纯洁性是无法成功的，而无政府主义是三民主义的最终阶段，因此无政府主义者应当与国民党联合起来，支持国民党的斗争，以早日实现无政府主义。他们抛弃了早日沿袭的克鲁泡特金的观点，转而接受了来自第一个无政府主义者蒲鲁东的构想，主张联邦原则构建新中国，在他们的设想中不再需要完全废除国家。"
  socdem_national_socialism_subtype:0 "温和国家社会主义"
