--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -417,7 +417,7 @@
  QIE_YGD_destroy_concessions:0 "终结租界"
  QIE_YGD_expand_our_flock:0 "扩大我们信众"
  QIE_YGD_holy_fortresses:0 "神圣的要塞"
- QIE_legitimacy_of_the_monarchy:0 "君主制的合法性：§o过街老鼠§!"
+ QIE_legitimacy_of_the_monarchy:0 "君主制的合法性：§R过街老鼠§!"
  QIE_legitimacy_of_the_monarchy_desc:0 "大清国祚表面上已然延绵三百余载，可如今君臣伦常却已黯然失色，积重难返。在中国公民，无论是官僚、工人还是农民眼中，一众暴君僭主怀揣着改革的承诺来了又去，到头来一切却不过是原地踏步。大清奉天承命，在名义上宣称了华夏四境的法统，可却只是带着国家步步走向灭亡。若是还想让百姓信服君君臣臣之纲纪，那首先便要把他们从国乱岁凶、纷争不息的境遇中解救出来。同时也要让百姓相信一件事——清虽旧邦，其命维新。\n\n毫无疑问，自1928年以来，朝廷一直在塑造自身的现代形象。宣统帝只不过是代表人民意志的仆人，当然人民群众从来没支持过他。而在奢华的巡幸、无意义的宣言之外，真正负责民族国家建设计划的设计师是直系集团。直系还在乎自己的名声，所以至少在关注民意这方面还是可圈可点的。然而，鉴于其备受争议的过去，许多人对此并不乐观。"
  QIE_legitimacy_of_the_monarchy_1:0 "君主制的合法性：§r草台班子§!"
  QIE_legitimacy_of_the_monarchy_1_desc:0 "$QIE_legitimacy_of_the_monarchy_desc$"
@@ -449,6 +449,12 @@
  QIE_extol_nationalist_cause_desc:0 "若说什么是中国青年党的底色，想必就是至真至诚的爱国主义。他们对国家与人民的忠诚无可挑剔，他们唤醒了无数心中尚存民族自豪与政治信仰的国民，他们将自己的灵魂与血肉毫无保留的奉献给了国家大业。他们的运动是出于对国家纯粹的爱，而这些随时甘愿为华夏文明抛头颅洒热血的英雄儿女，如今随时听候我们的差遣。"
  QIE_seeing_to_rural_reconstruction:0 "着手乡村建设"
  QIE_seeing_to_rural_reconstruction_desc:0 "通过与国会中帝国宪政会的改革派人士合作，我们将全力以赴解决中国农村的突出问题。民为邦本，我们将开始实施晏阳初提出的“四大教育”和“三大方式”，以此推动中国成为现代化国家。"
+ QIE_populist_support:0 "国耻今方雪！"
+ QIE_populist_support_desc:0 "在我国政府提议废除先前与使馆城市工部局各帝国主义列强签订的所有具有正式约束力的债务协议后，汹涌的民意浪潮迅速席卷了全国，知识分子、农民，甚至不乏一些军阀也都纷纷向内阁表达了祝贺。此事有力地证明了我们作为国际公认的中国政府的合法性！不过，这并不意味着我国就能完全挣脱列强施加的经济制裁。"
+ QIE_nationalised_german_industry:0 "国有化德国工业"
+ QIE_nationalised_german_industries_desc:0 "脱离德国老鹰是一项代价高昂的决定，但最终是有益的。虽然我们可能被背信弃义的帝国主义者实施的灾难性制裁所压垮，但直系亦可发动金融战争。透过将所有部分或全部持有的德国金融公司、工厂和军火库国有化，我们将可以利用这些资源来弥补所失去的外国投资。"
+ QIE_iterating_upon_german_designs:0 "复现德国设计"
+ QIE_iterating_upon_german_designs_desc:0 "历经百年国耻后，如今中国在现代战争领域几乎没有任何拿得出手的创新，只能依赖外国设计，这无疑是我们最难抹去的恶名之一。虽然事实如此，但我们仍可以通过逆向工程学到很多东西，国内现已出现一项新颖的发明——刘氏步枪。德人最是两面三刀，而通过研究库存的德国毛瑟枪、步枪还有火炮，我们将努力开发出不受其掣肘的国产型号。"
  QIE_local_logistics:0 "传统后勤"
  QIE_local_logistics_desc:0 "我们已经同西方的那些机动化后勤之类的新奇玩意儿无缘了，毕竟中国的基础设施无法支撑这样的支援装备。采用传统的后勤运输方式确实无法使我们在这方面赢得任何的科技优势，但是要知道骡马可比卡车更能应付崎岖的山路。"
  QIE_german_bailout:0 "德国的援助"
@@ -927,6 +933,7 @@
  QIE_loose_ends_TT:0 "解锁£decision_icon_small §H决议§!以§Y夺取蒙古§!和§Y西藏§!，前提是还没控制这些地区。\n解锁£decision_icon_small §H决议§!以§Y征服中国其他的未控制地区§!\n解锁£decision_icon_small §H决议§!以§Y整合忠诚的地方政府§!"
  QIE_end_concessions_TT:0 "解锁£decision_icon_small §H决议§!以夺取§Y澳门§!、§Y青岛§!和§Y其他的外国租界§!，前提是上述地区仍未受控制。"
  QIE_improve_legitimacy_tt: "§G民众对我们政府的看法将会改善！§!"
+ QIE_debt_default_tt: "§R我们得出了结论，一切外来帝国主义势力强加给中国的条约、曾具约束力的债务都将成为空文废纸。我们也拒不承认他们财报上的一切巨额亏空。然而，这些帝国主义分子怕是不会善罢甘休。§!"
  breach_dams_TT:0 "解锁£decision_icon_small §H决议§!来§Y掘开黄河堤坝。§!如果你在和平时期完成了这个国策，你可以将平民转移离开危险地区，在某种程度上减轻洪水将会带来的负面效果。"
  civilians_relocated_TT:0 "当我们掘开大坝，政治点数花费和稳定度减益将会大大减少。"
  QIE_caokun_constitution_tt:0 "曹锟宪法将在短期内保证稳定，但长远来看势必会耗尽政治点数。"
@@ -2231,7 +2238,7 @@
  qiewpf.16.d:0 "我们查封各大报社的行为引来了北京各大高校学生的强烈不满，他们纷纷走上街头控诉政府的暴政行为，他们宣称虽然我们的政府自称自己是民主政府但是所作所为根本不是一个民主政府所能做出来的。他们要求我们重新放开禁令，重新开报。不过他们的抗议并没有掀起太多风量，政府也没有管他们的抗议，几日后北京城又恢复了平静。"
  qiewpf.16.a:0 "这一幕我好像见过"
 
-
+#民选
  POLITICS_QIE_YAN_YANGCHU_DESC:0 "张君劢 "
  POLITICS_HU_SHIH_ROC_DESC:0 "作为一名哲学家和知识分子，这些本该使他远离政治的身份却因为他的爱国心让他义无反顾的参加到了政治之中，在大选之后，胡适最终取得了毫无疑问的胜利，他成为了新生的中华民国的首任民选总统，他将用自己的实用主义价值观改造这个腐朽不堪的政坛。"
  POLITICS_GU_WEIJUN_ROC_DESC:0 "顾维钧 "
@@ -2242,32 +2249,27 @@
 
  QIE_good_leader:0 "最好的总统"
 
+ QIE_gong_tuan_victory:0 "§Y难以置信的当选者§!"
+ QIE_ming_she_second:0 "§Y民主社会党的第二任期§!"
+ QIE_jin_bu_second:0 "§Y进步党的第二任期§!"
+ QIE_xian_zheng_dang_left_second:0 "§Y宪政民主党的第二任期§!"
+ QIE_xian_zheng_dang_right_second:0 "§Y宪政民主党的第二任期§!"
+ QIE_gong_he_dang_second:0 "§Y共和党的第二任期§!"
+
  QIE_fa_zhi_guan_nian:0 "法制观念"
- QIE_fa_zhi_guan_nian_desc:0 " "
  QIE_da_po_hang_hui_bi_lei:0 "打破行会壁垒"
- QIE_da_po_hang_hui_bi_lei_desc:0 " "
  QIE_peace_and_union:0 "团结一致"
- QIE_peace_and_union_desc:0 " "
  QIE_peace_and_union2:0 "团结一致"
- QIE_peace_and_union2_desc:0 " "
  QIE_peace_and_union3:0 "团结一致"
- QIE_peace_and_union3_desc:0 " "
  QIE_guo_ming_jiao_yu:0 "国民教育"
  QIE_guo_ming_jiao_yu_desc:0 "要把科学知识推广到广大农民身上"
  QIE_zhong_jiao_zheng_ce:0 "宽松的宗教环境"
- QIE_zhong_jiao_zheng_ce_desc:0 " "
  QIE_bao_rong:0 "宽容主义"
- QIE_bao_rong_desc:0 " "
  QIE_bao_rong2:0 "宽容主义"
- QIE_bao_rong2_desc:0 " "
  QIE_zhi_shi_de_jia_zhi:0 "知识的价值"
- QIE_zhi_shi_de_jia_zhi_desc:0 " "
  QIE_zhi_shi_de_jia_zhi2:0 "知识的价值"
- QIE_zhi_shi_de_jia_zhi2_desc:0 " "
  QIE_yan_lun_zi_you:0 "言论自由"
- QIE_yan_lun_zi_you_desc:0 " "
  QIE_gui_ze_de_yi_yi:0 "正人君子的社会"
- QIE_gui_ze_de_yi_yi_desc:0 " "
  QIE_cong_yu_de_cai_Zheng:0 "充裕的财政"
  QIE_cong_yu_de_cai_Zheng_desc:0 "我们再也不用为政府破产而担心了"
  QIE_cong_yu_de_cai_Zheng2:0 "充裕的财政"
@@ -2279,26 +2281,20 @@
  QIE_Ricardo_economy2:0 "李嘉图模式"
  QIE_Ricardo_economy2_desc:0 "税收不是来自资本，就是来自收入"
  QIE_jia_ting_zhi_shang:0 "家庭至上"
- QIE_jia_ting_zhi_shang_desc:0 " "
  QIE_localist_laws:0 "地方主义理念"
- QIE_localist_laws_desc:0 " "
  QIE_localist_laws2:0 "地方主义理念"
- QIE_localist_laws2_desc:0 " "
  QIE_agrarian_paternalism:0 "农本思想"
- QIE_agrarian_paternalism_desc:0 " "
  QIE_si_shu_wu_jing3:0 "四书五经"
  QIE_si_shu_wu_jing3_desc:0 "经典传统，我劝你多读"
  QIE_neostolypinist_reforms:0 "服从的银行业"
- QIE_neostolypinist_reforms_desc:0 " "
  QIE_social_democratic_china:0 "守护共和制"
- QIE_social_democratic_china_desc:0 " "
  QIE_social_democratic_china2:0 "守护共和制"
- QIE_social_democratic_china2_desc:0 " "
  QIE_corporativism:0 "法团主义经济"
- QIE_corporativism_desc:0 " "
  QIE_independence:0 "孑然一身"
- QIE_independence_desc:0 " "
+ QIE_radicalism:0 "工人权益"
 
+ QIE_syndicalist_party_ROC:0 "工团党"
+ QIE_syndicalist_party_ROC_long:0 "中华民国工团党(The Labor Union Party of the Republic of China)\n§L尽管张国焘并没有宣布自己真的退出中国工团党，也依旧打着这一党派的旗帜活跃着，但是在事实上如今他已经被这一党派开除。也因此即便他宣称自己是工团党人，他也不得不创立一个全新的政党，来谋取继续在政坛上活跃。§!"
  QIE_social_democrat_party_ROC:0 "中国民主社会党"
  QIE_social_democrat_party_ROC_long:0 "中国民主社会党(China Democratic Socialist Party)\n§L中国民主社会党是由一群民主共和派人士组建而成的，他们成立的初衷就是为了对抗国民党在中国政坛的一党独大。但如今国民党蜗居东南，早已不复从前，而张君劢、张东荪等人依旧在北京活跃。党锢解禁之后，他们高举宪法旗号，希望重塑民国，勘定宪法。§!"
  QIE_social_liberal_party_ROC:0 "新进步党"
@@ -2314,6 +2310,15 @@
 
  QIE_roc_election:0 "真正的大选"
  QIE_roc_election_desc:0 "民国已经统一，我们的梦想已经实现，属于共和国真正的选举即将召开，欢呼吧，中华儿女。我们终于结束了分裂的岁月！"
+
+ QIE_gong_tuan_dang:0 "工团党脱颖而出"
+ QIE_gong_tuan_dang_desc:0 "四年前不会有人想到这一天，张国焘从成都开始一步一步的向上攀登，如今他终于完成了自己的夙愿，在大选之中他豪取40%投票高票当选，那些过去诋毁他嘲讽他的人现在终于得闭上他们的嘴巴了。"
+ QIE_tu_di_fa_gai_ge:0 "改革土地法"
+ QIE_tu_di_fa_gai_ge_desc:0 "因为土地问题我们的农民长年以来都过着饥寒交迫的生活，我们必须要出手干预，从土地法开始，降低租金，鼓励土地赎买。"
+ QIE_lao_gong_zai_quan:0 "劳工债券"
+ QIE_lao_gong_zai_quan_desc:0 "张国焘总统提出了一种全新的政策：劳工债券。这些债券将保护劳工免受工资纠纷或老板的财务负担，在劳动者失业后帮助劳动者获取技能以能够重新就业，改善劳工的医疗、保险、住房，并让劳工有能力过上体面的生活。"
+ QIE_gong_ren_lian_bang:0 "工人联邦"
+ QIE_gong_ren_lian_bang_desc:0 "基础已然铸牢，通过将失业人员纳入我们的计划，并促进人与人间的合作，我们可能最终会建立起一个工人联邦。很快，所有需要帮助的人都能生产他们需要的东西，并同彼此交换。私营企业要么学会竞争，要么学会按照政府设定的新价格出售他们的产品。"
 
  QIE_min_she_dang:0 "民主社会党当选"
  QIE_min_she_dang_desc:0 "张君劢与张东荪的梦想终于实现了，他们在大选中以绝对的优势取得了胜利，在这个四年里，他们将会把自己的理念化为现实。"
@@ -2334,6 +2339,9 @@
  QIE_zhong_hua_bi_jiang_fu_xing:0 "中华必将复兴"
  QIE_zhong_hua_bi_jiang_fu_xing_desc:0 "中华民族必将从全世界民族丛林中脱颖而出，实现从站起来、富起来到强起来的伟大飞跃，中华民族伟大复兴已经进入了不可逆转的历史进程，而这一伟大的历史时刻将由我们来见证。"
 
+ QIE_min_she_dang_second:0 "民主社会党的第二任期"
+ QIE_min_she_dang_second_desc:0 " "
+
  QIE_jin_bu_dang:0 "进步党当选"
  QIE_jin_bu_dang_desc:0 "由胡适率领的新进步党赢得了他们渴望的大选胜利，他们取得了绝对优势，将在下个四年中实现他们曾许诺的一切政治理念。"
  QIE_rong_ren_chu_jin_he_ping:0 "宽容迎来和平"
@@ -2352,6 +2360,9 @@
  QIE_du_li_de_shi_fa_desc:0 "法治只是要政府官吏的一切行为都不得逾越法律规定的权限。法治只认得法律，不认得人。宪政论无甚玄秘，只是政治必须依据法律，和政府对于人民应负责任，两原则而已。"
  QIE_tian_fu_ren_quan:0 "无规则，无道德"
  QIE_tian_fu_ren_quan_desc:0 "一个肮脏的国家，如果人人讲规则而不是谈道德，最终会变成一个有人味儿的正常国家，道德自然会逐渐回归；一个干净的国家，如果人人都不讲规则却大谈道德，谈高尚，天天没事儿就谈道德规范，人人大公无私，最终这个国家会堕落成为一个伪君子遍布的肮脏国家。"
+
+ QIE_jin_bu_dang_second:0 "进步党的第二任期"
+ QIE_jin_bu_dang_second_desc:0 " "
 
  QIE_xian_zheng_dang_left:0 "左派宪政党当选"
  QIE_xian_zheng_dang_left_desc:0 "由顾维钧率领的民主宪政党自由派取得了大选的绝对胜利，他将会使自己的理念化为现实，带来中华走向新的未来。"
@@ -2372,6 +2383,9 @@
  QIE_free_dragon:0 "航向自由的巨龙"
  QIE_free_dragon_desc:0 "中华这条巨龙挣脱了捆绑在身上的沉甸甸的枷锁，奋力腾飞而起，再也没有列强能够阻拦巨龙飞翔的身影。自由的声音响彻大地，自由吧，中华儿女。"
 
+ QIE_xian_zheng_dang_left_second_focus:0 "左派宪政党继续统治"
+ QIE_xian_zheng_dang_left_second_focus_desc:0 " "
+
  QIE_xian_zheng_dang_right:0 "右派宪政党当选"
  QIE_xian_zheng_dang_right_desc:0 "由章士钊率领的民主宪政党保守派取得了大选的绝对胜利，他将会使自己的理念化为现实，带来中华走向新的未来。"
  QIE_zhong_hua_ru_jia:0 "发扬中华儒家传统"
@@ -2390,6 +2404,9 @@
  QIE_di_fang_zhu_guan_desc:0 "联省派所主张的联省方案的最大优点就是在于地方上的主观能动性，少了中央强加给他们的负担，他们的经济发展必然会更加顺畅，这些地方官员比我们更熟悉他们所主政地区的特殊性，能够因地制宜的准备更好的方案。"
  QIE_zhi_xu_jin_ran:0 "秩序井然"
  QIE_zhi_xu_jin_ran_desc:0 "政治稳定，经济繁荣，我们的社会正稳步向好。没有人会质疑章士钊所带来的一系列改革措施不是最适合我们。繁荣的局面所有人有目共睹。"
+
+ QIE_xian_zheng_dang_right_second_focus:0 "右派宪政党继续统治"
+ QIE_xian_zheng_dang_right_second_focus_desc:0 " "
 
  QIE_gong_he_dang:0 "共和党当选"
  QIE_gong_he_dang_desc:0 "由颜惠庆率领的共和党取得了大选的绝对胜利，他将会使自己的理念化为现实，带来中华走向新的未来。"
@@ -2410,11 +2427,14 @@
  QIE_shi_jian_yue_fa:0 "实践约法精神"
  QIE_shi_jian_yue_fa_desc:0 "辛亥革命之后，我们有一部虽然不完善但是对中华而言同样是划时代的宪法《中华民国约法》，比之如今而言，该法仍有可取之处。虽然我们不能够直接重新启用它，来代替如今这软弱不堪的“宪法”。但是我们还是能够发扬他的精神，来消除现有懦弱宪法的毒素。"
 
+ QIE_gong_he_dang_second_focus:0 "共和党继续前行"
+ QIE_gong_he_dang_second_focus_desc:0 " "
+
  qieroc.1.t:0 "中国民主社会党成立"
  qieroc.1.d:0 "1912年中华民国建国，梁启超统合共和党、统一党和民主党组织为进步党，是当时国会第一大党，张东荪当时虽未入党，然参与密切。1918年，中国北洋政府国会大选，梁启超与张东荪所组织的“研究系”参选，却不敌给段祺瑞组织的“安福俱乐部”惨败。而后梁启超、张东荪等人则转以著述、讲学、办学、办报为主要事业，并组织“共学社”、“讲学社”等。1932年，张东荪与张君劢组织中国国家社会党（民社党的前身），创办《再生》周刊，抨击政府无能，丧权辱国。便被当时的政府所压制，禁止他们再以所谓党派行事。如今党派非罪化，党禁已解除，张东荪与张君劢联合《益世报》主编罗隆基、脱离了帝国宪政党的大教育家晏阳初等人立刻宣布组党，希望参政。"
  qieroc.1.a:0 "中国的政坛又多一个玩家"
  qieroc.2.t:0 "统一宣言"
- qieroc.2.d:0 "各位同胞们：\n\n今天，我们站在这里，共同见证中华民族的伟大历史时刻！ 经过长达数十年的战乱和动荡，我们终于迎来了盼望已久的统一！我，吴佩孚，谨代表北洋政府，向所有为之付出牺牲和努力的同胞们致以最崇高的敬意！回首过去，我们历经了无数的磨难和考验。 军阀割据、外敌入侵，中华大地饱受战火蹂躏。人民流离失所，国家濒临危亡。无数仁人志士为了民族的独立和解放，抛头颅洒热血，前仆后继。正是由于无数先辈的英勇奋斗，才为我们今天的统一奠定了坚实的基础。 我要特别感谢那些在战场上浴血奋战的将士们，是你们用鲜血和生命捍卫了国家的尊严！我要感谢那些在后方默默奉献的百姓们，是你们用辛勤的劳动支撑起国家的复兴！今天，我们终于实现了中华民族的统一！ 这是全体中华儿女的共同胜利！这是历史的必然选择！这是中华民族伟大复兴的必经之路！统一后的中国，将是一个更加强大、更加富裕、更加文明的国家！ 我们将携手共进，建设一个自由、民主、繁荣、富强的现代化国家！\n\n但是，我们的任务依然艰巨。 我们要继续努力，巩固统一成果，建设更加美好的家园。我们要振兴经济，提高人民生活水平；我们要发展文化，增强国家软实力；我们要维护国家安全，捍卫民族尊严。我相信，在全体中华儿女的共同努力下，我们的伟大祖国一定会更加辉煌灿烂！最后，让我再一次向所有为中华民族统一做出贡献的同胞们致以崇高的敬意！\n\n中华民族万岁！\n\n中国统一万岁！"
+ qieroc.2.d:0 "各位同胞们：\n\n今天，我们站在这里，共同见证中华民族的伟大历史时刻！经过长达数十年的战乱和动荡，我们终于迎来了盼望已久的统一！我，吴佩孚，谨代表北洋政府，向所有为之付出牺牲和努力的同胞们致以最崇高的敬意！回首过去，我们历经了无数的磨难和考验。军阀割据、外敌入侵，中华大地饱受战火蹂躏。人民流离失所，国家濒临危亡。无数仁人志士为了民族的独立和解放，抛头颅洒热血，前仆后继。正是由于无数先辈的英勇奋斗，才为我们今天的统一奠定了坚实的基础。我要特别感谢那些在战场上浴血奋战的将士们，是你们用鲜血和生命捍卫了国家的尊严！我要感谢那些在后方默默奉献的百姓们，是你们用辛勤的劳动支撑起国家的复兴！今天，我们终于实现了中华民族的统一！这是全体中华儿女的共同胜利！这是历史的必然选择！这是中华民族伟大复兴的必经之路！统一后的中国，将是一个更加强大、更加富裕、更加文明的国家！我们将携手共进，建设一个自由、民主、繁荣、富强的现代化国家！\n\n但是，我们的任务依然艰巨。我们要继续努力，巩固统一成果，建设更加美好的家园。我们要振兴经济，提高人民生活水平；我们要发展文化，增强国家软实力；我们要维护国家安全，捍卫民族尊严。我相信，在全体中华儿女的共同努力下，我们的伟大祖国一定会更加辉煌灿烂！最后，让我再一次向所有为中华民族统一做出贡献的同胞们致以崇高的敬意！\n\n中华民族万岁！\n\n中国统一万岁！"
  qieroc.2.a:0 "该死的，我要哭出来了"
  qieroc.3.t:0 "筹备大选"
  qieroc.3.d:0 "统一的中华民国终于在历经十余年的战乱后重现于世。然而，权力的更迭仅仅是序幕，真正的考验才刚刚开始。北洋政府深知，要长治久安，必须建立一套行之有效的政治制度。而民主选举，无疑是现代文明的象征，也是民心所向。于是，一场轰轰烈烈的选举筹备工作拉开了帷幕。首先，政府颁布了《选举法》，对选举的程序、资格等事项做出了详细规定。为了保障选举的公平公正，还成立了独立的选举机构--中央选举委员会。由人人敬仰的大元帅吴佩孚亲自担任委员会会长。与此同时，各政党纷纷摩拳擦掌，积极准备参与竞选。进步党、民社党等诸多政党都制定了竞选纲领，并派出骨干成员四处宣传，争取选民的支持。一时间，整个国家都沉浸在选举的热烈气氛中。报纸上充斥着各党的政纲和候选人的竞选宣言，街头巷尾也到处可见支持不同政党的宣传标语。然而，选举的道路并非一帆风顺。一些地方政府为了维护自身的利益，试图操纵选举，甚至采取暴力手段恐吓选民。对此，中央政府严厉打击，并派出军队维持秩序，确保选举的顺利进行。"
@@ -2513,7 +2533,27 @@
  qieroc.30.t:0 "香港回归"
  qieroc.30.d:0 "“母亲，我要回来，母亲！”自从香港在1840年被软弱的清政府割让出去后，已经脱离了祖国母亲一百年了。在今天，中国政府重新收复了香港，当香港人民箪食壶浆，喜迎王师的时候。[QIE.GetLeader]心中百感莫及“100年，100年啊！我们后辈终于收复了香港，这可是莫大的荣耀啊！”上午10点，[QIE.GetLeader]大总统在紫荆花广场发表讲话：“亲爱的同胞们，我们已经收复了香港这个流浪了一百年的游子应该回家了！”虽然收复香港是一件很光荣的事情，但是，我们的国家仍未统一，还有更多的反对派等着我们去处理。我们的国家也仍未强大，我们的民族复兴才刚刚开始。复兴尚未成功，同胞仍需努力!”演讲结束，[QIE.GetLeader]在政府汇报完汇报工作后，眺望对面的维多利亚港......"
  qieroc.30.a:0 "香港，回来了。那，我们的事业也成功了一点了吧？"
-
+ qieroc.31.t:0 "[GetYear]年总统大选"
+ qieroc.31.d:0 "各地的投票站刚刚关闭，[GetYear]年选举的选票已经开始了统计，获得最多的选举人票的总统候选人是..."
+ qieroc.31.a:0 "工团党！"
+ qieroc.31.b:0 "民主社会党！"
+ qieroc.31.c:0 "进步党！"
+ qieroc.31.e:0 "民主宪政党左派！"
+ qieroc.31.f:0 "民主宪政党右派！"
+ qieroc.31.g:0 "共和党！"
+ qieroc.32.t:0 "[GetYear]年总统大选"
+ qieroc.32.d:0 "各地的投票站刚刚关闭，[GetYear]年选举的选票已经开始了统计，获得最多的选举人票的总统候选人是..."
+ qieroc.32.a:0 "工团党！"
+ qieroc.32.b:0 "民主社会党！"
+ qieroc.32.c:0 "进步党！"
+ qieroc.32.e:0 "民主宪政党左派！"
+ qieroc.32.f:0 "民主宪政党右派！"
+ qieroc.32.g:0 "共和党！"
+ qieroc.33.t:0 "民社党的候选人"
+ qieroc.33.d.yes:0 "张君劢的总统任期已经步入尾声了，现在各个党派正在为下一次总统大选活跃着，民社党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表民社党参与选举，作为如今的总统，张君劢自然是最符合的人选，但是副总统张东荪也同样是一个好选择，党员们必须要在其中选择出他们的代言人。"
+ qieroc.33.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，民社党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表民社党参与选举。上一次代表民社党竞选的张君劢最后并没有取得一个太好的结果，民社党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，在这些除张君劢之外的民社党总统竞选候选人中党副手张东荪是最好的选择。"
+ qieroc.33.a:0 "张君劢是最好的选择"
+ qieroc.33.b:0 "张东荪是最好的选择"
 
  QIE_guan_xi_huan_he:0 "关系缓和"
 
