--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2492,7 +2492,7 @@
  qieroc.18.a:0 "维持比例代表制"
  qieroc.18.b:0 "改用多数代表制"
  qieroc.19.t:0 "宗教现状"
- qieroc.19.d:0 "尽管中国一项被认为是宗教氛围淡薄的国家，但是事实上并非如此，中国的宗教传统只是不如西方教会那般森严，各种民间传统信仰依旧盛行，如迎财神，拜龙王之类的传统文化中蕴含着的宗教信仰。以及发源于本土的道教信仰和印度等地传来的佛教信仰，中亚传来的穆斯林信仰，通过对外交流与不平等条约进入中国的天主教与基督教信仰混杂在一起。尽管我们的政府宣称“国家保障每个公民的信仰自由与信仰宗教、参与宗教活动的自由。”，政府本身是无信仰政府。但是宗教势力还是不断的试图影响政府，他们最大的目的就是想要从政府中获得拨款。如果我们拒绝，这将让国家远离教会事务，亦将给予公民完全的宗教自由，对于那些抵抗天主教、基督教自然是非常欢迎的。这样一来就会导致这些信仰的逐渐瓦解，不利于我们所宣传的兼容并包的宗教方针。除此之外就是于斌等人希望的，国家对教会进行专项拨款，虽然这可能让很多人不理解，但是至少在国际上会收获赞誉。"
+ qieroc.19.d:0 "尽管中国一项被认为是宗教氛围淡薄的国家，但是事实上并非如此，中国的宗教传统只是不如西方教会那般森严，各种民间传统信仰依旧盛行，如迎财神，拜龙王之类的传统文化中蕴含着的宗教信仰。以及发源于本土的道教信仰和印度等地传来的佛教信仰，中亚传来的穆斯林信仰，通过对外交流与不平等条约进入中国的天主教与基督教信仰混杂在一起。尽管我们的政府宣称“国家保障每个公民的信仰自由与信仰宗教、参与宗教活动的自由。”，政府本身是无信仰政府。但是宗教势力还是不断的试图影响政府，他们最大的目的就是想要从政府中获得拨款。如果我们拒绝，这将让国家远离教会事务，亦将给予公民完全的宗教自由，对于那些抵抗天主教、基督教的教派自然是非常欢迎的。但这样一来就会导致这些信仰的逐渐瓦解，不利于我们所宣传的兼容并包的宗教方针。除此之外就是于斌等人希望的，国家对教会进行专项拨款，虽然这可能让很多人不理解，但是至少在国际上会收获赞誉。"
  qieroc.19.a:0 "教会的事情我们管了，上帝保佑"
  qieroc.19.b:0 "教会的事情归上帝管，别找我们"
  qieroc.20.t:0 "贵族身份"
