--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2258,6 +2258,7 @@
 
  QIE_fa_zhi_guan_nian:0 "法制观念"
  QIE_da_po_hang_hui_bi_lei:0 "打破行会壁垒"
+ QIE_da_po_hang_hui_bi_lei3:0 "中华焕然一新"
  QIE_peace_and_union:0 "团结一致"
  QIE_peace_and_union2:0 "团结一致"
  QIE_peace_and_union3:0 "团结一致"
@@ -2340,7 +2341,13 @@
  QIE_zhong_hua_bi_jiang_fu_xing_desc:0 "中华民族必将从全世界民族丛林中脱颖而出，实现从站起来、富起来到强起来的伟大飞跃，中华民族伟大复兴已经进入了不可逆转的历史进程，而这一伟大的历史时刻将由我们来见证。"
 
  QIE_min_she_dang_second:0 "民主社会党的第二任期"
- QIE_min_she_dang_second_desc:0 " "
+ QIE_min_she_dang_second_desc:0 "再一次，人民做出了正确的选择，民主社会党赢得了这一次选举，他们将能继续推行他们想要推行的政策。"
+ QIE_gong_gong_gong_cheng:0 "公共工程"
+ QIE_gong_gong_gong_cheng_desc:0 "我们需要以一方面的代价来解决两方面的问题，同时应对造成国家安全风险的失业和欠发达问题。公共工程管理局将雇用大量人员来建造大型公共工程，如水坝、桥梁和公路，中国将迎来一次庞大的基础建设更新。"
+ QIE_xiang_chun_dian_qi_hua:0 "乡村电气化"
+ QIE_xiang_chun_dian_qi_hua_desc:0 "作为晏阳初推行的乡村建设项目中的一环，许多农村城镇缺乏电力和电力设施，但如果我们可以建立农村电气化管理局推行乡村电气建设，我们就可以对那些缺乏店里的地区进行资助，我们可以在收获大量选票的同时获得一个电气化的农村。"
+ QIE_quan_xin_guo_du:0 "全新国度"
+ QIE_quan_xin_guo_du_desc:0 "八年时间，在民社党的领导下中华繁荣昌盛，经济蓬勃发展，全国上下焕然一新，那些耻辱的过往已经进入了历史的角落，不再为人所知晓。中华已然再次伟大！"
 
  QIE_jin_bu_dang:0 "进步党当选"
  QIE_jin_bu_dang_desc:0 "由胡适率领的新进步党赢得了他们渴望的大选胜利，他们取得了绝对优势，将在下个四年中实现他们曾许诺的一切政治理念。"
@@ -2559,29 +2566,17 @@
 
  QIE_let_he_in:0 "扩张太平洋公约"
  QIE_let_VAN:0 "邀请[VIN.GetNameWithFlag]加入太平洋公约"
- QIE_let_VAN_desc:0 " "
  QIE_let_SIA:0 "邀请[SIA.GetNameWithFlag]加入太平洋公约"
- QIE_let_SIA_desc:0 " "
  QIE_let_BRM:0 "邀请[BRM.GetNameWithFlag]加入太平洋公约"
- QIE_let_BRM_desc:0 " "
  QIE_let_BHC:0 "邀请[BHC.GetNameWithFlag]加入太平洋公约"
- QIE_let_BHC_desc:0 " "
  QIE_let_BHU:0 "邀请[BHU.GetNameWithFlag]加入太平洋公约"
- QIE_let_BHU_desc:0 " "
  QIE_let_SKM:0 "邀请[SKM.GetNameWithFlag]加入太平洋公约"
- QIE_let_SKM_desc:0 " "
  QIE_let_AFG:0 "邀请[AFG.GetNameWithFlag]加入太平洋公约"
- QIE_let_AFG_desc:0 " "
  QIE_let_PER:0 "邀请[PER.GetNameWithFlag]加入太平洋公约"
- QIE_let_PER_desc:0 " "
  QIE_let_AST:0 "邀请[AST.GetNameWithFlag]加入太平洋公约"
- QIE_let_AST_desc:0 " "
  QIE_let_TRM:0 "邀请[TRM.GetNameWithFlag]加入太平洋公约"
- QIE_let_TRM_desc:0 " "
  QIE_let_NYC:0 "邀请[NYC.GetNameWithFlag]加入太平洋公约"
- QIE_let_NYC_desc:0 " "
  QIE_let_USA:0 "邀请[USA.GetNameWithFlag]加入太平洋公约"
- QIE_let_USA_desc:0 " "
 
  QIE_chong_deng_shi_jie:0 "重返世界舞台"
  QIE_chong_deng_shi_jie_desc:0 "中国已经被世界遗忘太久了，其他国家都认为我们落后愚昧，但是现在是时候告诉他们，中国已经涅槃重生了。"
