--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2266,7 +2266,8 @@
  QIE_guo_ming_jiao_yu_desc:0 "要把科学知识推广到广大农民身上"
  QIE_zhong_jiao_zheng_ce:0 "宽松的宗教环境"
  QIE_bao_rong:0 "宽容主义"
- QIE_bao_rong2:0 "宽容主义"
+ QIE_fdic_idea:0 "国家银行"
+ QIE_public_goods:0 "国家医疗体系"
  QIE_zhi_shi_de_jia_zhi:0 "知识的价值"
  QIE_zhi_shi_de_jia_zhi2:0 "知识的价值"
  QIE_yan_lun_zi_you:0 "言论自由"
@@ -2282,9 +2283,11 @@
  QIE_Ricardo_economy2:0 "李嘉图模式"
  QIE_Ricardo_economy2_desc:0 "税收不是来自资本，就是来自收入"
  QIE_jia_ting_zhi_shang:0 "家庭至上"
+ QIE_local_budgeting:0 "经济去中心化"
  QIE_localist_laws:0 "地方主义理念"
  QIE_localist_laws2:0 "地方主义理念"
  QIE_agrarian_paternalism:0 "农本思想"
+ QIE_immigration_act_idea:0 "移民法案"
  QIE_si_shu_wu_jing3:0 "四书五经"
  QIE_si_shu_wu_jing3_desc:0 "经典传统，我劝你多读"
  QIE_neostolypinist_reforms:0 "服从的银行业"
@@ -2369,7 +2372,13 @@
  QIE_tian_fu_ren_quan_desc:0 "一个肮脏的国家，如果人人讲规则而不是谈道德，最终会变成一个有人味儿的正常国家，道德自然会逐渐回归；一个干净的国家，如果人人都不讲规则却大谈道德，谈高尚，天天没事儿就谈道德规范，人人大公无私，最终这个国家会堕落成为一个伪君子遍布的肮脏国家。"
 
  QIE_jin_bu_dang_second:0 "进步党的第二任期"
- QIE_jin_bu_dang_second_desc:0 " "
+ QIE_jin_bu_dang_second_desc:0 "再一次，人民做出了正确的选择，进步党赢得了这一次选举，他们将能继续推行他们想要推行的政策。"
+ QIE_si_fa_ba_mian_quan:0 "司法罢免权"
+ QIE_si_fa_ba_mian_quan_desc:0 "罢免权不应只停留于执法和立法领域，司法领域也同样需要，不然腐败、专横的法官们就会肆无忌惮地逍遥法外。"
+ QIE_yi_liao_bao_xian:0 "医疗保险"
+ QIE_yi_liao_bao_xian_desc:0 "医疗保险是那些社会主义者们长期叫喊的一项法案，该法案希望可以保证我们的贫困公民也可以得到他们所需要的医疗保障。"
+ QIE_guo_jia_yin_hang:0 "建设国家银行"
+ QIE_guo_jia_yin_hang_desc:0 "我们不能让人们因为银行倒闭而失去全部存款！我们必须建立一个有信用的国家银行，以让我们彻底避免财政信用破产。"
 
  QIE_xian_zheng_dang_left:0 "左派宪政党当选"
  QIE_xian_zheng_dang_left_desc:0 "由顾维钧率领的民主宪政党自由派取得了大选的绝对胜利，他将会使自己的理念化为现实，带来中华走向新的未来。"
@@ -2391,7 +2400,13 @@
  QIE_free_dragon_desc:0 "中华这条巨龙挣脱了捆绑在身上的沉甸甸的枷锁，奋力腾飞而起，再也没有列强能够阻拦巨龙飞翔的身影。自由的声音响彻大地，自由吧，中华儿女。"
 
  QIE_xian_zheng_dang_left_second_focus:0 "左派宪政党继续统治"
- QIE_xian_zheng_dang_left_second_focus_desc:0 " "
+ QIE_xian_zheng_dang_left_second_focus_desc:0 "再一次，人民做出了正确的选择，宪政党再一次赢得了选举，他们将能继续推行他们想要推行的政策。"
+ QIE_da_ji_long_duan:0 "打击垄断"
+ QIE_da_ji_long_duan_desc:0 "我们的经济发展政策导致市场上出现了许许多多的托拉斯企业，这是一个危险的消息，垄断带来的技术退步对我们的发展是毁灭性的，我们必须严厉打击这一点。"
+ QIE_qu_zhong_xin_hua_shi_chang:0 "去中心化市场"
+ QIE_qu_zhong_xin_hua_shi_chang_desc:0 "我们必须对我们的市场进行彻底的改革。联邦政府将不再紧盯着地方和州市场不放。相反，地方银行将在我们的经济中变得更为突出，我们将支持一个由各省自身管理的市场，这样将分摊中央财政出现危机时地方市场受到冲击的风险。"
+ QIE_ke_xue_shui_zhi:0 "科学税制"
+ QIE_ke_xue_shui_zhi_desc:0 "在我们的国家，甚至在我们的政府中，有许多人都认为我们必须提高税收来增加收入。然而，有人却对这一观点提出了质疑，他们认为减税才会带来更多的经济发展。这种方法将刺激我们的经济，让我们最终摆脱长年财政破产、经济危机的阴影。"
 
  QIE_xian_zheng_dang_right:0 "右派宪政党当选"
  QIE_xian_zheng_dang_right_desc:0 "由章士钊率领的民主宪政党保守派取得了大选的绝对胜利，他将会使自己的理念化为现实，带来中华走向新的未来。"
@@ -2413,7 +2428,13 @@
  QIE_zhi_xu_jin_ran_desc:0 "政治稳定，经济繁荣，我们的社会正稳步向好。没有人会质疑章士钊所带来的一系列改革措施不是最适合我们。繁荣的局面所有人有目共睹。"
 
  QIE_xian_zheng_dang_right_second_focus:0 "右派宪政党继续统治"
- QIE_xian_zheng_dang_right_second_focus_desc:0 " "
+ QIE_xian_zheng_dang_right_second_focus_desc:0 "再一次，人民做出了正确的选择，宪政党再一次赢得了选举，他们将能继续推行他们想要推行的政策。"
+ QIE_yi_ming_fa_an:0 "移民法案"
+ QIE_yi_ming_fa_an_desc:0 "移民并非是我们急切需要关注的问题，但是在世界冲突的大背景下，我们必须警惕非法移民进入我们的国家，毒害我们的人民的可能性。我们必须出台预防性法案，遏制非法移民。"
+ QIE_ai_gup_zhu_yi_jiao_yi:0 "爱国主义教育"
+ QIE_ai_gup_zhu_yi_jiao_yi_desc:0 "我们学校的孩子不爱国！我们的军人更是不爱他们的祖国！这才导致了长年分裂。我们的孩子必须被鼓励多唱国歌，以及学习来自民间的和传统的故事。这会在他们心目中树立起祖国的形象。"
+ QIE_kuo_da_nong_ye_fu_chi_zheng_che:0 "扩大农业支持"
+ QIE_kuo_da_nong_ye_fu_chi_zheng_che_desc:0 "农业是我们的立国之本，我们必须出台法案来提高农业补贴，并鼓励企业采购农民产品，而政府将会为变质的产品付款。"
 
  QIE_gong_he_dang:0 "共和党当选"
  QIE_gong_he_dang_desc:0 "由颜惠庆率领的共和党取得了大选的绝对胜利，他将会使自己的理念化为现实，带来中华走向新的未来。"
@@ -2561,6 +2582,24 @@
  qieroc.33.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，民社党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表民社党参与选举。上一次代表民社党竞选的张君劢最后并没有取得一个太好的结果，民社党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，在这些除张君劢之外的民社党总统竞选候选人中党副手张东荪是最好的选择。"
  qieroc.33.a:0 "张君劢是最好的选择"
  qieroc.33.b:0 "张东荪是最好的选择"
+ qieroc.33.c:0 "晏阳初是个不错的选择"
+ qieroc.34.t:0 "酒精法"
+ qieroc.34.d:0 "我们做了很久以前就应该做的事情，即将酒精纳入国家控制之下。中华被各种各样的成瘾物祸害太久了，我们终于可以通过质量和数量上的控制来解决当前的酒精问题，并为国家带来所需的收入。但，当然了酒文化是中华传统文化优秀的一部分，我们也不可能像那些社会主义者一样蛮横的要求禁止一切酒精，我们主要应当制订一个合法饮酒年龄，使我们的青年不为酒精所迷惑，因为这正是其职权所在。"
+ qieroc.34.a:0 "21岁正是一个人饮酒的最好年纪"
+ qieroc.34.b:0 "18岁就行，合理"
+ qieroc.34.c:0 "16岁，政府不应该管那么宽！"
+ qieroc.35.t:0 "福利改革"
+ qieroc.35.d:0 "我们终于有了推行全国与地方福利政策的政治资本，古人有言“仓廪实而知礼节，衣食足而知荣辱”，福利制度将能让穷人们的行为更加端正。在过去封建时代，福利制度几乎没有，进入民国和军阀割据后在部分地区福利政策有了小规模的发展，在张君劢总统当选后，他便试图推行更大的福利制度，以为生活在贫困线以下的人提供更多的福利，特别是单身母亲。我们可以要求工作成为领取福利的必要前提，或者干脆让福利只被这些母亲独享。这些改革将鼓励民众树立职业道德，同时为最需要的人保留所需资金。"
+ qieroc.35.a:0 "强化工作要求"
+ qieroc.35.b:0 "强化范围限定"
+ qieroc.36.t:0 "争夺补助金"
+ qieroc.36.d:0 "由于我们的政策集中在有利于商业的方面上，许多游说团体正要求政府的拨款。海事委员会希望这些拨款主要用于本地的造船厂，特别是位于江南造船厂等，这将增加我们的贸易吞吐量，并利于军事舰艇的建造，我们如今正需要扩充海上军事力量。然而，小微企业联盟得到了民间更广泛的支持，他们正在请求政府的支持，以帮助他们生产消费品和创造就业机会。最后是汽车工业，我们的汽车产业基本上是从零起步难以和其他巨头抗衡，如果我们想要中国人开上中国车我们最好还是拉他们一把。但根据我们的平衡预算政策，只有一种企业能得到拨款，最后花落谁家呢？"
+ qieroc.36.a:0 "造船厂"
+ qieroc.36.b:0 "小微企业"
+ qieroc.36.c:0 "汽车工业"
+ qieroc.37.t:0 "重获新生"
+ qieroc.37.d:0 "据目前的报告，大众已经恢复了对政府的信心，并由此恢复了对在我们领导下的市场的信心，从而促成了经济的大规模增长！投资热潮席卷了从东北到广东的任何一个角落，我们正迅速地进入一个新黄金时代，或者，正如激进的批评人士所讽刺的那样，一个新镀金时代。但让那些狂热反市场分子继续吹嘘他们的废物理论吧，我们还要为物美价廉的商品举杯相庆呢！"
+ qieroc.37.a:0 "资本主义万岁！"
 
  QIE_guan_xi_huan_he:0 "关系缓和"
 
@@ -2621,7 +2660,7 @@
  QIE_zi_ji_zi_zu:0 "自给自足"
  QIE_zi_ji_zi_zu_desc:0 "中华地域辽阔，物产丰富，何须他国资源？我们自己的物产就已经足够丰富。"
 
-
+#大清
  QIE_RUS:0 "大清-俄罗斯帝国"
  QIE_RUS_ADJ:0 "清帝国"
  QIE_RUS_DEF:0 "清帝国"
