--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2140,9 +2140,7 @@
  QIE_si_shu_wu_jing2:0 "四书五经"
  QIE_si_shu_wu_jing2_desc:0 "经典传统，我劝你多读"
  QIE_ru_jia_gong_ren:0 "儒家工会"
- QIE_ru_jia_gong_ren_desc:0 " "
  QIE_nong_ming:0 "国家津贴"
- QIE_nong_ming_desc:0 " "
 
  QIE_wu_pei_fu:0 "大总统吴佩孚"
  QIE_wu_pei_fu_desc:0 "最终，玉帅吴佩孚选择了最适合他的决策，他要延续自己作为护国公的时间，自己就任大总统，这一提案在国会自然是毫无疑问的通过了，尽管外界有着不小的声音认为这样一点儿也不民主。但是吴将军反而要问一问倘若民主就能救中华的话，为什么从辛亥革命到如今我们的国家依旧积贫积弱呢？"
@@ -2292,7 +2290,6 @@
  QIE_si_shu_wu_jing3_desc:0 "经典传统，我劝你多读"
  QIE_neostolypinist_reforms:0 "服从的银行业"
  QIE_social_democratic_china:0 "守护共和制"
- QIE_social_democratic_china2:0 "守护共和制"
  QIE_corporativism:0 "法团主义经济"
  QIE_independence:0 "孑然一身"
  QIE_radicalism:0 "工人权益"
@@ -2456,7 +2453,13 @@
  QIE_shi_jian_yue_fa_desc:0 "辛亥革命之后，我们有一部虽然不完善但是对中华而言同样是划时代的宪法《中华民国约法》，比之如今而言，该法仍有可取之处。虽然我们不能够直接重新启用它，来代替如今这软弱不堪的“宪法”。但是我们还是能够发扬他的精神，来消除现有懦弱宪法的毒素。"
 
  QIE_gong_he_dang_second_focus:0 "共和党继续前行"
- QIE_gong_he_dang_second_focus_desc:0 " "
+ QIE_gong_he_dang_second_focus_desc:0 "再一次，人民做出了正确的选择，共和党再一次赢得了选举，他们将能继续推行他们想要推行的政策。"
+ QIE_mei_ti_guan_kong:0 "媒体管控政策"
+ QIE_mei_ti_guan_kong_desc:0 "我们最危险的敌人已被镇压，终于可以着手解决那些企图毁灭国家的冗长报纸和记者们了！《媒体监管法案》将允许我们新成立的中央警察广播部门收集一份激进分子的名单，并在另一场针对政府的政变企图形成前立即禁止他们的出版物。"
+ QIE_kuo_da_zong_tong:0 "扩大总统权力"
+ QIE_kuo_da_zong_tong_desc:0 如果总统没有能力保护自己的人民，他怎么能保卫国家？总统将被赋予在地方制定戒严法的直接权力，军队将向他让渡更多的战时权力。"
+ QIE_an_quan_gai_ge:0 "国家安全改革"
+ QIE_an_quan_gai_ge_desc:0 "总统提出了一份改革清单，以阻止内部颠覆，其中包括全面身份核查，禁止夜间户外运动，更严厉的狩猎法，全面要求所有非国家军事武装组织上缴一切武器。"
 
  qieroc.1.t:0 "中国民主社会党成立"
  qieroc.1.d:0 "1912年中华民国建国，梁启超统合共和党、统一党和民主党组织为进步党，是当时国会第一大党，张东荪当时虽未入党，然参与密切。1918年，中国北洋政府国会大选，梁启超与张东荪所组织的“研究系”参选，却不敌给段祺瑞组织的“安福俱乐部”惨败。而后梁启超、张东荪等人则转以著述、讲学、办学、办报为主要事业，并组织“共学社”、“讲学社”等。1932年，张东荪与张君劢组织中国国家社会党（民社党的前身），创办《再生》周刊，抨击政府无能，丧权辱国。便被当时的政府所压制，禁止他们再以所谓党派行事。如今党派非罪化，党禁已解除，张东荪与张君劢联合《益世报》主编罗隆基、脱离了帝国宪政党的大教育家晏阳初等人立刻宣布组党，希望参政。"
