--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2457,9 +2457,9 @@
  QIE_mei_ti_guan_kong:0 "媒体管控政策"
  QIE_mei_ti_guan_kong_desc:0 "我们最危险的敌人已被镇压，终于可以着手解决那些企图毁灭国家的冗长报纸和记者们了！《媒体监管法案》将允许我们新成立的中央警察广播部门收集一份激进分子的名单，并在另一场针对政府的政变企图形成前立即禁止他们的出版物。"
  QIE_kuo_da_zong_tong:0 "扩大总统权力"
- QIE_kuo_da_zong_tong_desc:0 如果总统没有能力保护自己的人民，他怎么能保卫国家？总统将被赋予在地方制定戒严法的直接权力，军队将向他让渡更多的战时权力。"
- QIE_an_quan_gai_ge:0 "国家安全改革"
- QIE_an_quan_gai_ge_desc:0 "总统提出了一份改革清单，以阻止内部颠覆，其中包括全面身份核查，禁止夜间户外运动，更严厉的狩猎法，全面要求所有非国家军事武装组织上缴一切武器。"
+ QIE_kuo_da_zong_tong_desc:0 "如果总统没有能力保护自己的人民，他怎么能保卫国家？总统将被赋予在地方制定戒严法的直接权力，军队将向他让渡更多的战时权力。"
+ QIE_an_quan_gai_ge_fa:0 "国家安全改革"
+ QIE_an_quan_gai_ge_fa_desc:0 "总统提出了一份改革清单，以阻止内部颠覆，其中包括全面身份核查，禁止夜间户外运动，更严厉的狩猎法，全面要求所有非国家军事武装组织上缴一切武器。"
 
  qieroc.1.t:0 "中国民主社会党成立"
  qieroc.1.d:0 "1912年中华民国建国，梁启超统合共和党、统一党和民主党组织为进步党，是当时国会第一大党，张东荪当时虽未入党，然参与密切。1918年，中国北洋政府国会大选，梁启超与张东荪所组织的“研究系”参选，却不敌给段祺瑞组织的“安福俱乐部”惨败。而后梁启超、张东荪等人则转以著述、讲学、办学、办报为主要事业，并组织“共学社”、“讲学社”等。1932年，张东荪与张君劢组织中国国家社会党（民社党的前身），创办《再生》周刊，抨击政府无能，丧权辱国。便被当时的政府所压制，禁止他们再以所谓党派行事。如今党派非罪化，党禁已解除，张东荪与张君劢联合《益世报》主编罗隆基、脱离了帝国宪政党的大教育家晏阳初等人立刻宣布组党，希望参政。"
@@ -2603,6 +2603,11 @@
  qieroc.37.t:0 "重获新生"
  qieroc.37.d:0 "据目前的报告，大众已经恢复了对政府的信心，并由此恢复了对在我们领导下的市场的信心，从而促成了经济的大规模增长！投资热潮席卷了从东北到广东的任何一个角落，我们正迅速地进入一个新黄金时代，或者，正如激进的批评人士所讽刺的那样，一个新镀金时代。但让那些狂热反市场分子继续吹嘘他们的废物理论吧，我们还要为物美价廉的商品举杯相庆呢！"
  qieroc.37.a:0 "资本主义万岁！"
+ qieroc.38.t:0 "民主宪政党左翼的候选人"
+ qieroc.38.d.yes:0 "顾维钧的总统任期已经步入尾声了，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表党参与选举，作为如今的总统，顾维钧自然是最符合的人选，但是大工厂主张孝若也同样是一个好选择，党员们必须要在其中选择出他们的代言人。"
+ qieroc.38.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表宪政党参与选举。上一次代表宪政党竞选的顾维钧最后并没有取得一个太好的结果，宪政党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，在这些除顾维钧之外的宪政党总统竞选候选人中大工厂主张孝若是最好的选择。"
+ qieroc.38.a:0 "顾维钧是最好的选择"
+ qieroc.38.b:0 "张孝若是最好的选择"
 
  QIE_guan_xi_huan_he:0 "关系缓和"
 
