--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2608,6 +2608,16 @@
  qieroc.38.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表宪政党参与选举。上一次代表宪政党竞选的顾维钧最后并没有取得一个太好的结果，宪政党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，在这些除顾维钧之外的宪政党总统竞选候选人中大工厂主张孝若是最好的选择。"
  qieroc.38.a:0 "顾维钧是最好的选择"
  qieroc.38.b:0 "张孝若是最好的选择"
+ qieroc.39.t:0 "进步党的候选人"
+ qieroc.39.d.yes:0 "胡适的总统任期已经步入尾声了，现在各个党派正在为下一次总统大选活跃着，进步党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表党参与选举，作为如今的总统，胡适自然是最符合的人选，但是新生代的张佛泉也许是一个不错的选择，总之党员们必须要在其中选择出他们的代言人。"
+ qieroc.39.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，进步党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表进步党参与选举。上一次代表进步党竞选的胡适最后并没有取得一个太好的结果，进步党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，比如说新生代的张佛泉。"
+ qieroc.39.a:0 "胡适是最好的选择"
+ qieroc.39.b:0 "张佛泉是个好选择"
+ qieroc.40.t:0 "民主宪政党右翼的候选人"
+ qieroc.40.d.yes:0 "章士钊的总统任期已经步入尾声了，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表党参与选举，作为如今的总统，章士钊自然是最符合的人选，但是于右任也许是一个不错的选择，总之党员们必须要在其中选择出他们的代言人。"
+ qieroc.40.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表宪政党参与选举。上一次代表宪政党竞选的章士钊最后并没有取得一个太好的结果，宪政党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，比如说于右任。"
+ qieroc.40.a:0 "章士钊是最好的选择"
+ qieroc.40.b:0 "于右任是最好选择"
 
  QIE_guan_xi_huan_he:0 "关系缓和"
 
