--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2605,19 +2605,22 @@
  qieroc.37.a:0 "资本主义万岁！"
  qieroc.38.t:0 "民主宪政党左翼的候选人"
  qieroc.38.d.yes:0 "顾维钧的总统任期已经步入尾声了，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表党参与选举，作为如今的总统，顾维钧自然是最符合的人选，但是大工厂主张孝若也同样是一个好选择，党员们必须要在其中选择出他们的代言人。"
- qieroc.38.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表宪政党参与选举。上一次代表宪政党竞选的顾维钧最后并没有取得一个太好的结果，宪政党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，在这些除顾维钧之外的宪政党总统竞选候选人中大工厂主张孝若是最好的选择。"
+ qieroc.38.d.no:0 "总统的第一任期已经走向了尾声，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表宪政党参与选举。上一次代表宪政党竞选的顾维钧最后并没有取得一个太好的结果，宪政党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，在这些除顾维钧之外的宪政党总统竞选候选人中大工厂主张孝若是最好的选择。"
  qieroc.38.a:0 "顾维钧是最好的选择"
  qieroc.38.b:0 "张孝若是最好的选择"
  qieroc.39.t:0 "进步党的候选人"
  qieroc.39.d.yes:0 "胡适的总统任期已经步入尾声了，现在各个党派正在为下一次总统大选活跃着，进步党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表党参与选举，作为如今的总统，胡适自然是最符合的人选，但是新生代的张佛泉也许是一个不错的选择，总之党员们必须要在其中选择出他们的代言人。"
- qieroc.39.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，进步党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表进步党参与选举。上一次代表进步党竞选的胡适最后并没有取得一个太好的结果，进步党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，比如说新生代的张佛泉。"
+ qieroc.39.d.no:0 "总统的第一任期已经走向了尾声，现在各个党派正在为下一次总统大选活跃着，进步党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表进步党参与选举。上一次代表进步党竞选的胡适最后并没有取得一个太好的结果，进步党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，比如说新生代的张佛泉。"
  qieroc.39.a:0 "胡适是最好的选择"
  qieroc.39.b:0 "张佛泉是个好选择"
  qieroc.40.t:0 "民主宪政党右翼的候选人"
  qieroc.40.d.yes:0 "章士钊的总统任期已经步入尾声了，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表党参与选举，作为如今的总统，章士钊自然是最符合的人选，但是于右任也许是一个不错的选择，总之党员们必须要在其中选择出他们的代言人。"
  qieroc.40.d.no:0 "总统的第一任期已经走向了尾声，，现在各个党派正在为下一次总统大选活跃着，宪政党也必须要考虑好将要在这次大选中扮演什么样的地位。最关键的就是他们将要推选谁来代表宪政党参与选举。上一次代表宪政党竞选的章士钊最后并没有取得一个太好的结果，宪政党与总统之位失之交臂，也许这一次他们最好换一个人参选，这样也能给选民们一些新鲜感，比如说于右任。"
  qieroc.40.a:0 "章士钊是最好的选择"
- qieroc.40.b:0 "于右任是最好选择"
+ qieroc.40.b:0 "于右任是最好的选择"
+ qieroc.41.t:0 "豺狼笑"
+ qieroc.41.d:0 "要么我们所奋斗一生，千万人所牺牲流血的东西是一个巨大的谎言，要么张国焘就是个彻底的狗操的混蛋。\n我出生在青岛，我的父亲是个码头装卸工人，我曾亲眼见过这个德皇的东方明珠是如何一鞭子一鞭子打在我父亲的背上，我不会忘记晾晒飘荡着衣服上的鲜血混着海风的咸味，工人们铁一样黑的袜子，和他们粗糙的大手。我最忘不了的是他们的眼睛，麻木而悲伤，他们的瞳孔就像地图上黄色的山东半岛上那个标注着青岛的那个黑点。而一箱箱从内陆运出的矿产和财富，是青岛港口不断奔涌出的泪水。所以我坚信这必须改变，我们工人们，必须用最暴力，最顽强的手段，去止住我们大地母亲的泪水。\n而那贱种玩意，他自诩流着工人的血，装模作样的振臂高呼，可工团主义对于他，不过是花枝招展的皮草围脖，扭扭屁股，期望那些军阀和洋人，就能在他身上多留一点嫖资了。\n战友们，他可把我们卖了一个好价钱啊，那沉甸甸的一袋最圣洁，最勇敢的的牺牲和奋斗，被拿去换成了一个最下贱，最罪恶的礼物。他会遭报应的，这报应不是什么神仙或者救世主的天谴，这是我们每一个工人实实在在的愤怒，是唾沫也是子弹。\n战士们，我们经历过最残忍的磨难，和不计手段的镇压，可而历史的趋势自然会推动公团主义的胜利。而张国焘不过是最后一条拦路的狗，他现在可以祈祷了，当我手里这颗子弹打进他脑袋的时候，这婊子依旧能像现在这样盈盈奸笑。\n骨沃中原土，魂入九垓舞，英灵在人间，长擂震妖鼓。"
+ qieroc.41.a:0 "“这些不知好歹的东西！”"
 
  QIE_guan_xi_huan_he:0 "关系缓和"
 
